# space_travelers

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
basic/: CMakeLists.txt
basic/include/basic/: input.h  visual.h
basic/src/: input.cpp  visual.cpp
common/: CMakeLists.txt
common/include/common/: color.h  common.h  mathf.h  rect.h  stepViewer.hpp  vec2.h  vec2i.h
common/src/: color.cpp  mathf.cpp  rect.cpp  vec2.cpp  vec2i.cpp
common/tests/: CMakeLists.txt  test.cpp
game/: CMakeLists.txt
game/include/: Pathfind.h  WorldGrid.h  func.h
game/src/: Pathfind.cpp  WorldGrid.cpp  func.cpp  main.cpp  test.cpp
